--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-# requirements.txt
-
-# --- AI & Media SDKs ---
-google-generativeai     # For Gemini
-elevenlabs              # For ElevenLabs Voice Synthesis
-ffmpeg-python           # For FFmpeg video composition
-
-# --- Web & API Clients ---
-httpx                   # Async HTTP client for D-ID API
-pyppeteer               # For headless Chrome to render Chart.js
-
-# --- Utilities ---
-python-dotenv           # For loading .env files
+google-generativeai>=0.4.0 # Use a recent version
+python-dotenv>=1.0.0
+matplotlib>=3.5.0
+ffmpeg-python>=0.2.0
+requests>=2.27.0
+numpy>=1.21.0
+Pillow>=9.0.0
+# Moviepy might still be useful for simple duration checks if ffprobe fails badly
+moviepy>=1.0.3
