--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ numpy>=1.21.0
 Pillow>=9.0.0
 # Moviepy might still be useful for simple duration checks if ffprobe fails badly
 moviepy>=1.0.3
+gradio
